--- a/resources/css/scss/modules/_modules.scss
+++ b/resources/css/scss/modules/_modules.scss
@@ -1,5 +1,6 @@
 // Import Modules Scss
 @import 'flexbox';
+@import 'popup'; // 팝업
 @import 'table'; // 테이블
 @import 'form'; // 폼
 @import 'input'; // 인풋
