--- a/guide/css/guide.css
+++ b/guide/css/guide.css
@@ -2,7 +2,7 @@
 
 * {
 	font-family: "Noto Sans KR", sans-serif;
-	color: #333;
+	/* color: inherit; */
 	box-sizing: border-box;
 }
 /* :root {font-size:10px;} */
@@ -367,7 +367,7 @@ ul.state li strong {
 	border-top: 1px solid #eee;
 	color: #333;
 	font-size: 12px;
-	max-height: 80vh;
+	max-height: 250px;
 	overflow: auto;
 }
 .hljs,
