--- a/resources/css/scss/_colors.scss
+++ b/resources/css/scss/_colors.scss
@@ -11,6 +11,7 @@
 $btn-light-border: #e0e5ec; //확인필요
 $blue: #3064b8;
 
+
 // Common
 $gray-2: #222;
 $gray-4: #444;
@@ -23,11 +24,13 @@ $gray-e: #eee;
 $gray-e4: #e4e4e4;
 $gray-f5: #f5f5f5;
 
+
 // Common
 $white: #fff;
 $black: #000;
 $lavender: #cfdef5;
 $marine-blue: #002a70;
+
 
 //Button
 $btn-light-blue-hover-bg: #99b6e2;
@@ -66,3 +69,43 @@ $searchLine: #eee;
 
 
 
+// BP
+
+$gray-3: #333;
+$gray-6: #666;
+$gray-d: #ddd;
+$gray-f7: #f7f7f7;
+
+$layer-blue: #2476dd;
+$layer-blue-hover: #0053bb;
+
+$bp-light-blue: #bdd6f5;
+$bp-light-blue-hover: #e3ecf9;
+
+$bp-gray: #eff0f2;
+$bp-gray-hover: #eff0f2;
+$bp-yellow: #faab00;
+$bp-yellow-hover: #de9800;
+
+$badge-pink: #fde3e3;
+
+.discount {
+    color: $error !important;
+}
+
+//BC
+
+$bc-blue: #3b6ac5;
+$bc-blue-hover: #2253b4;
+$bc-blue-disabled: #d7e1f4;
+
+$bc-light-blue: #dee9ff;
+$bc-light-blue-hover: #bcccee;
+$bc-light-blue-disabled: #f4f8ff;
+
+
+$bc-green: #1e6c42;
+$bc-green-hover: #074d27;
+
+$bc-light-green: #d4eee0;
+$bc-light-green-hover: #98d2b3;
