--- a/resources/css/scss/_overrides.scss
+++ b/resources/css/scss/_overrides.scss
@@ -11,16 +11,33 @@
 * dropdown
 * ------------------------------
 */
+.bp {
+	.k-dropdown {
+		height: 30px;
+		&.sm {
+			min-width: 106px !important;
+		}
+		&.md {
+			min-width: 180px !important;
+			max-width: 180px !important;
+		}
+	}
+}
 .k-dropdown {
+	width: 100%;
 	white-space: nowrap;
 	display: inline-flex;
-	width: 110px !important;
+	min-width: 110px !important;
+	height: 28px;
+	
 	.k-dropdown-wrap {
 		display: flex;
 		flex-flow: row nowrap;
 		justify-content: space-between;
+		align-items: center;
 		width: 100%;
-		height: 28px;
+		// height: 28px;
+		height: 100%;
 		padding: 0;
 		background: $white;
 		border: 1px solid $gray-c;
@@ -189,8 +206,6 @@
 .k-grid .k-grouping-header,
 .k-grid-header {
 	background: $gray-e;
-	.k-grid-header-wrap {
-	}
 	th.k-header {
 		@include font-size-sm;
 		position: relative;
@@ -266,16 +281,8 @@
 		padding: 0 10px;
 		border-left: 1px solid $gray-e4;
 		border-top: 1px solid $gray-e4;
-		// border-width: 0 0 1px 1px;
 		border-color: $gray-e4;
 	}
-}
-
-.k-grid th input.k-checkbox {
-	// thead 체크박스
-}
-.k-grid input.k-checkbox + label.k-checkbox-label .k-grid input.k-checkbox {
-	//tbody 체크박스
 }
 
 /*
@@ -357,6 +364,43 @@
 			margin-left: 10px;
 		}
 	}
+	.k-tool-group {
+		.k-button {
+            @include font-size-sm;
+            flex: 0 1 auto;
+            min-width: 57px;
+            background-color: $white;
+            border:  1px solid $gray-a;
+            border-right: 0; 
+            color: $gray-7;
+            border-radius: 0;
+            &.k-state-active, &.k-state-focused  {
+                background-color: $accent;
+                border: 1px solid $accent;
+                border-right: 0;
+                color: $white;
+                + .k-button {
+                    border-left: 1px solid $accent;
+                }
+            }
+            &:first-child {
+                border-radius: 3px 0 0 3px;
+            }
+            &:last-child {
+                border-radius: 0 3px 3px 0;
+                border-right: 1px solid $gray-a;
+                &.k-state-active, &.k-state-focused  {
+                    border-right: 1px solid $accent;
+                }
+            }
+            + .k-button {
+                &.k-state-active {
+                    margin-left: 0px;
+                    padding-left: 20px;
+                }
+            }
+        }
+	}
 }
 .k-editable-area iframe.k-content {
     display: block;
@@ -377,8 +421,15 @@
 			margin-top: 10px;
 		}
 	}
-	.label { min-width: 45px; }
+	.label { 
+		@include font-size-sm;
+		min-width: 45px; 
+		color: $gray-7;
+	}
 	.form-group, .form-set {
+		width: 100%;
+	}
+	.pop-box {
 		width: 100%;
 	}
 	.btn-box {
@@ -395,9 +446,29 @@
 
 /*
 * ------------------------------
-* 
+* textarea
 * ------------------------------
 */
+.k-textarea {
+	@include bp-font-size-sm;
+	display: flex;
+	padding: 6px 10px;
+	border: 1px solid $gray-c;
+	border-radius: 3px;
+	color: $gray-5;
+	transition: all 0.3s ease;
+	&.sm {
+		height: 80px;
+	}
+	::placeholder {
+		@include bp-font-size-sm;
+		color: $gray-a;
+		font-weight: 400;
+	}
+	&.k-state-focused {
+		border: 1px solid $gray-2;
+	}
+}
 
 /*
 * ------------------------------
