--- a/resources/css/scss/modules/_checkbox.scss
+++ b/resources/css/scss/modules/_checkbox.scss
@@ -22,6 +22,11 @@
     color: $gray-5;
     display: block;
 }
+.bp .table th .h-checkbox input[type="checkbox"] + label,
+.bp .table th .h-checkbox input[type="radio"] + label {
+    /*체크해제 상태*/
+    color: $gray-2;
+}
 .h-checkbox input[type="checkbox"] + label span,
 .h-checkbox input[type="radio"] + label span {
     position: relative;
@@ -60,6 +65,25 @@
 }
 .h-checkbox input[type="radio"]:checked + label::before {
     background-image: url('../images/icon/btn_radio_checked.svg');
+}
+
+
+.bp {
+    .h-checkbox input[type="checkbox"] + label::before { //20px(md)
+        @include iconSvg($width: 20px, $height: 20px, $name: 'bp_checkbox_default', $size: contain );
+    }
+    .h-checkbox input[type="radio"] + label::before { //20px(md)
+        @include iconSvg($width: 20px, $height: 20px, $name: 'bp_radio_default', $size: contain );
+    } 
+    .h-checkbox input[type="checkbox"]:checked + label::before {
+        @include iconSvg($width: 20px, $height: 20px, $name: 'bp_checkbox_checked', $size: contain );
+    }
+    .h-checkbox input[type="radio"]:checked + label::before {
+        @include iconSvg($width: 20px, $height: 20px, $name: 'bp_radio_checked', $size: contain );
+    }
+    .h-checkbox {
+        padding-left: 20px + 6px;
+    }
 }
 
 
