--- a/resources/css/scss/modules/_button.scss
+++ b/resources/css/scss/modules/_button.scss
@@ -3,6 +3,15 @@
  * 버튼
  * ------------------------------
  */
+.h-btn , .k-button {
+    &.hidden {
+        @include hide-text;
+        min-width: 0 !important;
+        padding: 0 !important;
+        background-color: transparent !important;
+        border: 0 !important;
+    }
+}
 .h-btn, .k-button {
     @include font-size-sm;
     display: flex;
@@ -39,11 +48,7 @@
         // 아이콘 같이 있는 경우
         margin-left: rem(6);
     }
-    &.hidden {
-        @include hide-text;
-        padding: 0 !important;
-        background-color: transparent;
-    }
+   
     &.k-button-icontext { 
         padding: 0 12px;
         > * + * {
@@ -152,23 +157,7 @@
             // background-color: $btn-light-blue-hover-bg;
         }
     }
-    &.yellow {
-        background-color: $bp-yellow;
-        border: 1px solid $bp-yellow;
-        color: $white;
-        &:hover, &:focus {
-            background-color: $bp-yellow-hover;
-            border: 1px solid $bp-yellow-hover;
-        }
-        &.k-state-active {
-
-        }
-        &.k-state-focused {
-            background-color: $bp-yellow-hover;
-            border: 1px solid $bp-yellow-hover;
-        }
-
-    }
+    
    
     &.logout { //로그아웃
         margin-left: 6px;
@@ -181,10 +170,21 @@
         }
     }
 }
-.bp .h-btn:not(.hidden), .bp .k-button:not(.hidden) {
+.bp .h-btn, .bp .k-button {
     min-width: 80px;
     height: 30px;
     padding: 0 16px;
+    background: $layer-blue;
+    border: 1px solid $layer-blue;
+    color: $white;
+    &:hover, &:focus {
+        background-color: $layer-blue-hover;
+        border: 1px solid $layer-blue;
+    }
+    &.k-state-focused {
+        background-color: $layer-blue-hover;
+        border: 1px solid $layer-blue-hover;
+    }
     &.refresh {
         min-width: unset;
         padding: 0 4px;
@@ -248,13 +248,38 @@
             border: 1px solid $gray-5;
         }
     }
+    &.yellow {
+        background-color: $bp-yellow;
+        border: 1px solid $bp-yellow;
+        color: $white;
+        &:hover, &:focus {
+            background-color: $bp-yellow-hover;
+            border: 1px solid $bp-yellow-hover;
+        }
+        &.k-state-active {
+
+        }
+        &.k-state-focused {
+            background-color: $bp-yellow-hover;
+            border: 1px solid $bp-yellow-hover;
+        }
+
+    }
 }
-.bc .h-btn:not(.hidden), .bc .k-button:not(.hidden) {
+.bc .h-btn, .bc .k-button {
     height: 30px;
     padding: 0 20px;
     background-color: $bc-blue;
     border: 1px solid $bc-blue;
     color: $white;
+    &:hover, &:focus {
+        background-color: $bc-blue-hover;
+        border: 1px solid $bc-blue-hover;
+    }
+    &.k-state-focused {
+        background-color: $bc-blue-hover;
+        border: 1px solid $bc-blue-hover;
+    }
     &.blue {
         background: $bc-blue;
         border: 1px solid $bc-blue;
@@ -303,7 +328,25 @@
             border: 1px solid $bc-blue;
         }
     }
+    &.gray-border {
+        background: $white;
+        border: 1px solid $gray-5;
+        color: $gray-2;
+        &:hover, &:focus {
+            background-color: $gray-e;
+            border: 1px solid $gray-9;
+        }
+        &.k-state-active {
+
+        }
+        &.k-state-focused {
+            background-color: $gray-e;
+            border: 1px solid $gray-9;
+        }
+    }
 }
+
+
 /*
  * ------------------------------
  * 버튼 그룹
