--- a/resources/css/scss/modules/_input.scss
+++ b/resources/css/scss/modules/_input.scss
@@ -197,6 +197,7 @@
 				padding: 0;
 				background-color: $white;
 				border-radius: 0px 3px 3px 0;
+				border: none;
 				border-left: 1px solid $gray-c;
 			}
 			.k-i-bp-search {
