--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1472,8 +1472,22 @@ button {
 .bc .k-dialog-titlebar .k-button {
   padding: 0;
 }
-.bc .k-dialog-content {
+.bc .content-group {
   padding: 30px;
+}
+.bc .content-group.has-check {
+  padding-bottom: 70px;
+}
+.bc .check-group {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  height: 40px;
+  background: #f5f5f5;
+  padding: 0 10px;
 }
 
 /*
@@ -2178,6 +2192,34 @@ td .form-box, th .form-box {
   background-size: contain;
 }
 .bp .h-checkbox {
+  padding-left: 26px;
+}
+
+.bc .h-checkbox input[type=checkbox] + label::before {
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/icon/bc_checkbox_default.svg");
+  background-size: contain;
+}
+.bc .h-checkbox input[type=radio] + label::before {
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/icon/bc_radio_default.svg");
+  background-size: contain;
+}
+.bc .h-checkbox input[type=checkbox]:checked + label::before {
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/icon/bc_checkbox_checked.svg");
+  background-size: contain;
+}
+.bc .h-checkbox input[type=radio]:checked + label::before {
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/icon/bc_radio_checked.svg");
+  background-size: contain;
+}
+.bc .h-checkbox {
   padding-left: 26px;
 }
 
