--- a/resources/css/scss/modules/_popup.scss
+++ b/resources/css/scss/modules/_popup.scss
@@ -138,11 +138,28 @@
         border-bottom: 1px solid $gray-d;
         font-weight: bold;
         .k-button {
-            padding: 0;
+            padding: 0; 
         }
     }
     .k-dialog-content {
+        // padding: 30px;
+    }
+    .content-group {
         padding: 30px;
+        &.has-check {
+            padding-bottom: 30px + 40px;
+        }
+    }
+    .check-group {
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        width: 100%;
+        height: 40px;
+        background: $gray-f5;
+        padding: 0 10px;
     }
 }
 
@@ -167,7 +184,6 @@
         &:hover, &:focus {
             background-color: transparent;
         }
-
     }
     .pop-timer-box {
         @include bc-font-size-md;
